test/crab/invalid/func_no_arg.crab
fn main() -> Int {
    print_int()

    return 0
}

fn print_int(Int argument) {
    print(argument)
}
